css/style.css
/* start Var */
:root {
    --main-color: #19c8fa;
    --trans-color: rgb(15 116 143 / 50%);
}

/* End Var */

/* Start Global Rules*/
* {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    padding: 0;
    margin: 0;
}

html {
    scroll-behavior: smooth;
}

body {
    font-family: 'Open Sans', sans-serif;
    background-color: #24252a;
}

ul {
    list-style: none;
}

.container {
    padding-left: 15px;
    padding-right: 15px;
    margin-left: auto;
    margin-right: auto;
}

/* // Small devices (landscape phones, 576px and up) */
@media (max-width: 576px) {
    .container {
        width: 100%;
    }
}

/* // Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
    .container {
        width: 750px;
    }
}

/* // Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .container {
        width: 970px;
    }
}

/* // X-Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    .container {
        width: 1170px;
    }
}

/* // XX-Large devices (larger desktops, 1400px and up) */
@media (min-width: 1400px) {
}

/*End Global Rules*/
/* Start My Components */
.section {
    padding: 100px;
}

.main-heading {
    text-align: center;
}

.main-heading h2 {
    font-weight: normal;
    font-size: 40px;
    position: relative;
    margin-bottom: 70px;
    text-transform: uppercase;
    color: #eee;
}

.main-heading h2::before {
    content: '';
    position: absolute;
    left: 50%;
    bottom: -30px;
    height: 2px;
    width: 140px;
    transform: translateX(-50%);
    background-color: #eee;
}

.main-heading h2::after {
    content: '';
    position: absolute;
    left: 50%;
    bottom: -38px;
    height: 14px;
    width: 14px;
    border: 2px solid #eee;
    border-radius: 50%;
    transform: translateX(-50%);
    background-color: #24252a;
}

.main-heading p {
    color: #eee;
    max-width: 100%;
    margin: 0 auto 100px;
    line-height: 1.8;
}

/* End My Components */
/* Start Header*/
header {
    /*if we want any changes on header full width*/
    position: absolute;
    left: 0;
    width: 100%;
    z-index: 3;
}

header .container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: relative;
    min-height: 97px;
}

header .container::after {
    content: '';
    position: absolute;
    height: 1px;
    width: calc(100% - 30px);
    bottom: 0px;
    left: 15px;
    background-color: #eee;
}

@media (max-width: 767px) {
    header .container::after {
        content: '';
        width: 100%;
        left: 0;
    }
}

header .container h3 {
    color: var(--main-color);
    font-style: italic;
    font-weight: 800;
    position: relative;
}

header .container h3::before {
    content: '';
    position: absolute;
    left: -30%;
    top: -80%;
    height: 50px;
    width: 50px;
    border: 2px solid var(--main-color);
    border-radius: 50%;
}

header nav {
    flex: 1;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}

header nav .tuggle-menue {
    color: #eee;
    font-size: 22px;
}

@media (min-width: 768px) {
    header nav .tuggle-menue {
        display: none;
    }
}

header nav ul {
    display: flex;
}

@media (max-width: 767px) {
    header nav ul {
        display: none;
    }

    header nav .tuggle-menue:hover + ul {
        display: flex;
        flex-direction: column;
        position: absolute;
        top: 100%;
        left: 0;
        width: 100%;
        background-color: #24252a;
    }

    header nav .tuggle-menue:hover + ul li a {
        padding: 15px;
    }
}

header nav ul li a {
    display: block;
    text-decoration: none;
    padding: 40px 10px;
    color: #eee;
    font-size: 16px;
    transition: 0.3s;
    position: relative;
    z-index: 2;
}

header nav ul li a.active,
header nav ul li a:hover {
    color: var(--main-color);
    border-bottom: 1px solid var(--main-color);
}

header nav .form {
    width: 40px;
    height: 30px;
    position: relative;
    margin-left: 30px;
    border-left: 1px solid #eee;
}

header nav .form i {
    color: #eee;
    position: absolute;
    font-size: 20px;
    top: 25%;
    right: 0;
}

/* End Header*/
/*Start Landing */
.landing {
    min-height: 100vh;
    background-image: url(../images/landing.jpg);
    background-size: cover;
    background-color: #24252a;
    position: relative;
}

.landing .overlay {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgb(0 0 0 / 60%);
}

.landing .text {
    position: absolute;
    left: 0;
    top: 50%;
    transform: translateY(-50%);
    width: 50%;
    padding: 50px;
    background-color: var(--trans-color);
    color: #eee;
    display: flex;
    justify-content: flex-end;
}


.landing .text .content {
    max-width: 500px;
}

@media (max-width: 767px) {
    .landing .text {
        width: 100%;
    }

    .landing .text .content {
        max-width: 100%;
    }
}

.landing .text .content h2 {
    font-size: 32px;
    font-weight: normal;
    line-height: 1.5;
    margin-bottom: 20px;
}

.landing .text .content p {
    font-size: 14px;
    line-height: 1.8;
}

.landing .change-background {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    color: #eee;
}

.landing .fa-angle-left {
    left: 50px;
}

.landing .fa-angle-right {
    right: 50px;
}

@media (max-width: 767px) {

    .landing .fa-angle-left,
    .landing .fa-angle-right {
        display: none;
    }

}

.landing .bullets {
    position: absolute;
    left: 50%;
    transform: translate(-50%);
    bottom: 20px;
    display: flex;
}


.landing .bullets li {
    width: 20px;
    height: 20px;
    border: 1px solid var(--main-color);
    border-radius: 50%;
    margin-right: 10px;
}

.landing .bullets li.active {
    background-color: var(--main-color);
    border-color: var(--main-color);
}
/* ... */

